made blue darker

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3249,7 +3249,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #000080;
+			background-color: #00003b;
 			color: white;
 		}
 
